Now the page is barely working, and has data models

--- a/static/index.html
+++ b/static/index.html
@@ -123,6 +123,10 @@
                     <h4 class="service-heading">Web Security</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
+		<a href="/app/home" 
+		   class="btn btn-xl">
+		  Ir a la zona de clientes
+		</a>
             </div>
         </div>
     </section>
