--- a/static/app.html
+++ b/static/app.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand">Protocol Services</a>
+          <a href="/app/home" class="navbar-brand">Protocol Services</a>
 	</div>
 	
 	<!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,7 +74,7 @@
           </div>
 	</div>
 	<div class="row">
-	  {{ page.text }}
+	  {{ text|safe }}
 	</div>
       </div>
     </section>
