--- a/static/app.html
+++ b/static/app.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/app/home" class="navbar-brand">Protocol Services</a>
+          <a href="/" class="navbar-brand">Comm. Protocol Services</a>
 	</div>
 	
 	<!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,6 +53,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="hidden">
               <a href="#page-top"></a>
+            </li>
+            <li>
+	      <a href="/app/home">Índice</a>
             </li>
             <li>
 	      <a href="/logout">Salir</a>
@@ -69,12 +72,12 @@
     <section id="services">
       <div class="container">
 	<div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading">{{ page.title }}</h2>
-          </div>
-	</div>
-	<div class="row">
-	  {{ text|safe }}
+          <div class="col-lg-12">
+	    <div class="text-center">
+              <h2>{{ page.title }}</h2>
+	    </div>
+	    {{ text|safe }}
+	  </div>
 	</div>
       </div>
     </section>
