Now with media uploading

--- a/static/users.html
+++ b/static/users.html
@@ -12,7 +12,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/content/home" class="navbar-brand">Comm. Protocol Services</a>
+          <a href="/admin" class="navbar-brand">Comm. Protocol Services</a>
 	</div>
 	
 	<!-- Collect the nav links, forms, and other content for toggling -->
