--- a/static/media.html
+++ b/static/media.html
@@ -22,9 +22,6 @@
               <a href="#page-top"></a>
             </li>
             <li>
-              <a href="/content/home">Índice</a>
-            </li>	    
-            <li>
               <a href="{{ logout_url }}">Salir</a>
             </li>	    
           </ul>
@@ -39,49 +36,44 @@
     <div class="container" style="margin-top:100px;">
       <div class="row">
         <div class="col-md-12" style="margin-bottom:20px;">
-	  <h2>{{ title }}</h2>
-	  {{ text|safe }}
-        </div>
-	<div class="container">
-	  <div class="well">
-	    <div class="text-center">
-	      <h1>Editar</h1>
-	    </div>
-	    <form action="/content/{{ slug }}" method="post" id="form" role="form">
-	      <input type="text" name="slug" value="{{ slug }}" hidden><br>
-	      <div class="form-group">
-		<label>Título:</label>
-		<input 
-		   type="text" 
-		   name="title"
-		   value="{{ title }}"required>
-	      </div>
-	      <div class="form-group">
-		<label>Suscripción:</label>
-		<input 
-		   type="text" 
-		   name="subscription"
-		   value="{{ subscription }}" required>
-		Válidas:
-		{% for sub in subscriptions %}
-		  {{ sub.name }},
-		{% endfor %}
- 	      </div>
-	      <textarea name="text" form="form">{{ edit }}</textarea><br>
-	      <input type="submit" value="Aceptar">
-	    </form>
-	  </div>
+	  <h2>Archivos</h2>
+	  <table class="table table-striped table-bordered">
+	    <tr>
+	      <th>Nombre</th>
+	      <th>Fecha</th>
+	      <th>Acción</th>
+	    </tr>
+	    {% for m in media %}
+	    <tr>
+	      <td>{{ m.name }}</td>
+	      <td>{{ m.when.strftime('%d-%m-%Y') }}</td>
+	      <td><a href="/serve/{{ m.blob }}">Descargar</a></td>
+	    </tr>
+	    {% endfor %}
+	    <tr>
+	      <td>
+		<form action="{{ upload_url }}"
+		      method="post"
+		      enctype="multipart/form-data">
+		  <input type="text"
+			 name="name"
+			 placeholder="Nombre">
+	      </td>
+	      <td>
+		<input type="file"
+		       name="file"
+		       multiple>
+	      </td>
+	      <td>
+		<input type="submit" value="Subir">
+		</form>
+	      </td>
+	    </tr>
+
+	  </table>
 	</div>
       </div>
     </div>
     {% endblock %}
     
-    {% block footer %}
-    <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
-    <script>
-      tinymce.init(
-      {selector:'textarea',
-      plugins:'code'});
-    </script>
-    {% endblock %}
     
