--- a/static/index.html
+++ b/static/index.html
@@ -468,12 +468,11 @@
                   <div class="form-group">
                     <input type="tel" 
 			   class="form-control" 
-			   placeholder="Validar correo electrónico *" 
+			   placeholder="Teléfono *" 
 			   id="phone" required
 			   data-validation-required-message="Por favor,
-							     compruebe que la
-							     dirección
-							     de correo es la misma">
+							     que el número
+							     es correcto">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
@@ -483,8 +482,7 @@
 			      placeholder="Mensaje *" 
 			      id="message" required
 			      data-validation-required-message="Por favor,
-								introduzca un mensaje.">
-		    </textarea>
+								introduzca un mensaje."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
