--- a/static/media.html
+++ b/static/media.html
@@ -57,7 +57,8 @@
 		      enctype="multipart/form-data">
 		  <input type="text"
 			 name="name"
-			 placeholder="Nombre">
+			 placeholder="Nombre"
+			 required>
 	      </td>
 	      <td>
 		<input type="file"
