--- a/static/content.html
+++ b/static/content.html
@@ -81,7 +81,7 @@
     <script>
       tinymce.init(
       {selector:'textarea',
-      plugins:'code'});
+      plugins:'code link image media'});
     </script>
     {% endblock %}
     
