--- a/static/users.html
+++ b/static/users.html
@@ -38,10 +38,14 @@
         <div class="col-md-12" style="margin-bottom:20px;">
 	  <h2>Suscripciones</h2>
 	  <table class="table table-striped table-bordered">
-	    <tr><th>Tipo</th></tr>
+	    <tr>
+	      <th>Tipo</th>
+	      <th>Nivel</th>
+	    </tr>
 	    {% for s in subscriptions %}
 	    <tr>
 	      <td>{{ s.name }}</td>
+	      <td>{{ s.level }}</td>
 	    </tr>
 	    {% endfor %}
 	    <tr>
@@ -58,6 +62,11 @@
 		  <input type="text"
 			 name="name"
 			 placeholder="Tipo">
+	      </td>
+	      <td>
+		  <input type="number"
+			 name="level"
+			 placeholder="Nivel">
 		  <input type="submit" value="Crear">
 		</form>
 	      </td>
@@ -69,7 +78,7 @@
 	    <tr>
 	      <th>Nombre</th>
 	      <th>Contraseña</th>
-	      <th>Suscripción</th>
+	      <th>Nivel de Suscripción</th>
 	      <th>Creado en</th>
 	      <th>Acción</th>
 	    </tr>
@@ -77,7 +86,7 @@
 	    <tr>
 	      <td>{{ u.name }}</td>
 	      <td>{{ u.password }}</td>
-	      <td>{{ u.subscription.get().name }}</td>
+	      <td>{{ u.subscription }}</td>
 	      <td>{{ u.when.strftime('%d-%m-%Y') }}</td>
 	      <td>
 		<form action="/users" method="post">
