--- a/static/admin.html
+++ b/static/admin.html
@@ -35,7 +35,7 @@
     {% block content %}
     <div class="container" style="margin-top:200px;">
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <span class="fa-stack fa-4x">
 	    <a href="/content/home">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -45,9 +45,19 @@
           <h4 class="service-heading">Contenido</h4>
           <p class="text-muted">Editar y crear contenido de texto</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <span class="fa-stack fa-4x">
 	    <a href="/media">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-check-square-o fa-stack-1x fa-inverse"></i>
+	    </a>
+          </span>
+          <h4 class="service-heading">Actividades</h4>
+          <p class="text-muted">Crear actividades y test.</p>
+        </div>
+        <div class="col-md-3">
+          <span class="fa-stack fa-4x">
+	    <a href="#">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-film fa-stack-1x fa-inverse"></i>
 	    </a>
@@ -55,7 +65,7 @@
           <h4 class="service-heading">Multimedia</h4>
           <p class="text-muted">Subir y administrar material multimedia.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <span class="fa-stack fa-4x">
 	    <a href="/users">
 	      <i class="fa fa-circle fa-stack-2x text-primary"></i>
