--- a/static/admin.html
+++ b/static/admin.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-	    <a href="/media">
+	    <a href="/activity">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-check-square-o fa-stack-1x fa-inverse"></i>
 	    </a>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-md-3">
           <span class="fa-stack fa-4x">
-	    <a href="#">
+	    <a href="/media">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-film fa-stack-1x fa-inverse"></i>
 	    </a>
