--- a/static/login.html
+++ b/static/login.html
@@ -55,7 +55,7 @@
 		     name="password" required></br>
 		</div>
 		<div class="form-group">
-		  <input type="submit" value="Aceptar">
+		  <input class="btn" type="submit" value="Aceptar">
 		</div>
 	      </form>
 	    </div>
