--- a/static/users.html
+++ b/static/users.html
@@ -128,7 +128,7 @@
 	      <td>{{ u.when }}</td>
 	      <td>
 		<button class="btn btn-danger"
-			ng-click="deleteUser('{{ u.key }}')">
+			ng-click="deleteUser(u.id)">
 		  Borrar
 		</button>
 	      </td>
