--- a/static/assign.html
+++ b/static/assign.html
@@ -45,11 +45,36 @@
           <div class="col-lg-12">
 	    <h2>Asignar tarea</h2>
 	    {% raw %}
-	    {{ task }}
 	    <form>
+	      <div class="form-group">
+		<label>Grupo</label>
+		<select
+		   ng-options="g.id as g.name for g in groups"
+		   ng-model="newgroup"
+		   class="form-control">
+		</select>
+	      </div> 
+	      <div class="form-group">		
+		<label>Activa en:</label>
+		<datepicker 
+		   ng-model="start" 
+		   class="well well-sm"></datepicker>
+	      </div>
+	      <div class="form-group">
+		<label>Completar antes de:</label>
+		<datepicker 
+		   ng-model="due" 
+		   class="well well-sm"></datepicker>
+	      </div>
+	      <div class="form-group">
+		<label>Duración en minutos (0 si no hay)</label>
+		<input class="form-control"
+		       ng-model="duration_in_minutes"
+		       type="number">
+	      </div>
 	      <button 
 		 class="btn"
-		 ng-click="postActivity">Whatever
+		 ng-click="postAssignment()">Asignar
 	      </button>
 	    </form>
 	    {% endraw %}
