--- a/static/login.html
+++ b/static/login.html
@@ -51,7 +51,7 @@
 		     <i class="fa fa-key fa-fw fa-2x"></i>
 		  </label>
 		  <input 
-		     type="text" 
+		     type="password" 
 		     name="password" required></br>
 		</div>
 		<div class="form-group">
