--- a/static/makeassignment.html
+++ b/static/makeassignment.html
@@ -22,10 +22,13 @@
               <a href="#page-top"></a>
             </li>
             <li>
-	      <a href="#">Bla</a>
+	      <a href="/app/home">Índice</a>
             </li>
             <li>
-	      <a href="#">Bla</a>
+	      <a href="/user?id={{ user.key.urlsafe() }}">
+		<i class="fa fa-user"></i>
+		{{ user.name }}
+	      </a>
             </li>	    
             <li>
 	      <a href="/logout">Salir</a>
@@ -41,7 +44,7 @@
     {% block content %}
     {% raw %}
     <section id="services">
-      <div class="container" ng-controller="taskController">
+      <div class="container" ng-controller="makeAssignmentController">
 	<div class="row">
           <div class="col-lg-12">
 	    <h2>Nuevo ejercicio</h2>
@@ -121,10 +124,9 @@
 		</div>
 		<div class="form-group">
 		  <label for="name">Descripción</label>
-		  <textarea 
-		     rows="5" 
-		     class="form-control"
-		     ng-model="activity.description">
+		  <textarea rows="5"
+			    class="form-control"
+			    ng-model="activity.description">
 		    {{ activity.description }}
 		  </textarea>
 		</div>
