--- a/static/viewtask.html
+++ b/static/viewtask.html
@@ -41,7 +41,7 @@
     {% block content %}
     {% raw %}
     <section id="services">
-      <div class="container" ng-controller="taskController">
+      <div class="container" ng-controller="viewTaskController">
 	<div class="row">
           <div class="col-lg-12">
 	    <h2>Nuevo ejercicio</h2>
@@ -121,10 +121,9 @@
 		</div>
 		<div class="form-group">
 		  <label for="name">Descripción</label>
-		  <textarea 
-		     rows="5" 
-		     class="form-control"
-		     ng-model="activity.description">
+		  <textarea rows="5"
+			    class="form-control"
+			    ng-model="activity.description">
 		    {{ activity.description }}
 		  </textarea>
 		</div>
