--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,11 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button 
+                	type="button" 
+                	class="navbar-toggle" 
+                	data-toggle="collapse" 
+                	data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -97,8 +101,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Servicios</h2>
                     <h3 class="section-subheading text-muted">
-		      Muchas ventajas para nuestros clientes.
-		    </h3>
+		    			Muchas ventajas para nuestros clientes.
+		    		</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -136,8 +140,8 @@
                     impedit.</p>
                 </div>
 		<a href="/app/home" 
-		   class="btn btn-xl">
-		  Ir a la zona de clientes
+			class="btn btn-xl">
+			Ir a la zona de clientes
 		</a>
             </div>
         </div>
