Added more proper icons

--- a/static/app.html
+++ b/static/app.html
@@ -67,7 +67,10 @@
               <a href="#page-top"></a>
             </li>
             <li>
-	      <a href="/app/home">Índice</a>
+	      <a href="/app/home">
+		<i class="fa fa-home"></i>
+		Índice
+	      </a>
             </li>
             <li>
 	      <a href="/user?id={{ user.key.urlsafe() }}">
