--- a/static/activity.html
+++ b/static/activity.html
@@ -69,7 +69,7 @@
 	  <table class="table table-striped table-bordered">
 	    <tr>
 	      <th>Tipo</th>
-	      <th>Creado en</th>
+	      <th>Modificado en</th>
 	      <th>Usuario</th>
 	      <th>Acciones</th>
 	    </tr>
