--- a/static/task.html
+++ b/static/task.html
@@ -77,7 +77,7 @@
 		       ng-repeat="choice in item.choices track by $index">
 		    <label>{{ $index+1 + '.-' }}</label>
 		    <input type="text"
-			   ng-model="choice"
+			   ng-model="$parent.item.choices[$index]"
 			   class="form-control">
 		  </div>
 		  <button class="btn btn-info"
