--- a/static/user.html
+++ b/static/user.html
@@ -100,33 +100,25 @@
 	{% else %}
 	<h2>Ninguna tarea pendiente</h2>
 	{% endif %}
-      </div>
-    </div>
-  </div>
-</section>
 
-
-<section id="comments">
-  <div class="container">
-	<div class="row">
-	  <div class="col-lg-12">
-	    <div id="disqus_thread"></div>
-	    <script type="text/javascript">
+	<h2>Mensajes</h2>
+	<div id="disqus_thread"></div>
+	<script type="text/javascript">
           /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
           var disqus_shortname = 'vscontentmanager'; 
-	      
+	  
           /* * * DON'T EDIT BELOW THIS LINE * * */
           (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
           dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
           })();
-	    </script>
-	    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	    <a href="http://disqus.com" class="dsq-brlink">comments powered
-	      by <span class="logo-disqus">Disqus</span></a>
-	  </div>
-	</div>
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	<a href="http://disqus.com" class="dsq-brlink">comments powered
+	  by <span class="logo-disqus">Disqus</span></a>
+      </div>
+    </div>
   </div>
 </section>
 {% endblock %}
