Change button styles to look good on ipads

--- a/static/assign.html
+++ b/static/assign.html
@@ -73,7 +73,7 @@
 		       type="number">
 	      </div>
 	      <button 
-		 class="btn"
+		 class="btn btn-primary"
 		 ng-click="postAssignment()">Asignar
 	      </button>
 	    </form>
