--- a/static/users.html
+++ b/static/users.html
@@ -64,7 +64,7 @@
 		       placeholder="Nivel"
 		       ng-model="newsubscriptionlevel">
 		<button ng-click="postSubscription()"
-			class="btn">
+			class="btn btn-primary">
 		  Crear
 		</button>
 	      </td>
@@ -101,7 +101,7 @@
 	      </td>
 	      <td>
 		<button ng-click="postGroup()"
-			class="btn">
+			class="btn btn-primary">
 		  Crear
 		</button>
 	      </td>
@@ -162,7 +162,7 @@
 	      <td>
 	      </td>
 	      <td>
-		<button class="btn" ng-click="postUser()">
+		<button class="btn btn-primary" ng-click="postUser()">
 		  Crear Usuario
 		</button>
 	    </td>
