Solved bug in activity assignment

--- a/static/makeassignment.html
+++ b/static/makeassignment.html
@@ -61,7 +61,7 @@
 	    <div ng-if="results.kind == 'Actividad'">
 	      <div class="form-group">
 		<label>Actividad: {{ results.name }}</label>
-		<p>{{ results.description }}</p>
+		<p>{{ results.data.description }}</p>
 	      </div>
 	    </div>
 	    
