Users are also deleted asynchronously

--- a/static/users.html
+++ b/static/users.html
@@ -128,7 +128,7 @@
 	      <td>{{ u.when }}</td>
 	      <td>
 		<button class="btn btn-danger"
-			ng-click="deleteUser(u.id)">
+			ng-click="deleteUser(u.id,$index)">
 		  Borrar
 		</button>
 	      </td>
