--- a/static/users.html
+++ b/static/users.html
@@ -38,15 +38,17 @@
 	 ng-controller="userController">
       <div class="row">
         <div class="col-md-12" style="margin-bottom:20px;">
-	  <h2>Suscripciones</h2>
+	  <h2>Cursos (máximo 10)</h2>
 	  <table class="table table-striped table-bordered">
 	    <tr>
 	      <th>Tipo</th>
-	      <th>Nivel</th>
+	      <th>Página de inicio</th>
+	      <th>Nivel (sin uso, poner a 1)</th>
 	    </tr>
 	    {% for s in subscriptions %}
 	    <tr>
 	      <td>{{ s.name }}</td>
+	      <td>{{ s.startpage }}</td>
 	      <td>{{ s.level }}</td>
 	    </tr>
 	    {% endfor %}
@@ -56,6 +58,13 @@
 		       name="name"
 		       class="form-control"
 		       ng-model="newsubscriptionname"
+		       placeholder="Nombre">
+	      </td>
+	      <td>
+		<input type="text"
+		       name="startpage"
+		       class="form-control"
+		       ng-model="newsubscriptionstartpage"
 		       placeholder="Nombre">
 	      </td>
 	      <td>
@@ -114,7 +123,7 @@
 	    <tr>
 	      <th>Nombre</th>
 	      <th>Contraseña</th>
-	      <th>Nivel de Suscripción</th>
+	      <th>Curso</th>
 	      <th>Grupo</th>
 	      <th>Creado en</th>
 	      <th>Acción</th>
