--- a/static/app.html
+++ b/static/app.html
@@ -92,11 +92,11 @@
     {% endblock %}
     
     {% block content %}
-    <section id="services">
+    <section id="services" ng-controller="appController">
       <div class="container">
 	<div class="row">
           <div class="col-lg-12">
-	    {% if page.slug == "home" %}
+	    {% if page.slug == homepage %}
 	    {% if assignments %}
 	    <a href="/user?id={{ user.key.urlsafe() }}">
 	      <button class="btn btn-warning btn-lg">
@@ -106,6 +106,13 @@
 	    </a>
 	    {% endif %}
 	    {% endif %}
+	    {% raw %}
+	    <ol class="breadcrumb">
+	      <li ng-repeat="b in breadcrumbs">
+		<a href="/app/{{ b }}">{{ b }}</a>
+	      </li>
+	    </ol>
+	    {% endraw %}
 	    <div class="text-center">
               <h2>{{ page.title }}</h2>
 	    </div>
