remove breadcrumbs at login

--- a/static/login.html
+++ b/static/login.html
@@ -77,6 +77,9 @@
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
+    <script>
+      localStorage.removeItem("protocolservices.breadcrumbs");
+    </script>
     
   </body>
 </html>
