--- a/static/app.html
+++ b/static/app.html
@@ -42,7 +42,7 @@
     <script src="/js/controller.js"></script>
   </head>
 
-  <body id="page-top" class="index">
+  <body id="page-top" class="index" ng-controller="appController">
     
     {% block navigation %}
     <!-- Navigation -->
@@ -78,7 +78,8 @@
 	      </a>
             </li>	    
             <li>
-	      <a href="/logout">
+	      <a href="#"
+		 ng-click="logOut()">
 		<i class="fa fa-sign-out"></i>
 		Salir
 	      </a>
@@ -92,7 +93,7 @@
     {% endblock %}
     
     {% block content %}
-    <section id="services" ng-controller="appController">
+    <section id="services">
       <div class="container">
 	<div class="row">
           <div class="col-lg-12">
@@ -108,6 +109,7 @@
 	    {% endif %}
 	    {% raw %}
 	    <ol class="breadcrumb">
+	      <li><i class="fa fa-home"></i></li>
 	      <li ng-repeat="b in breadcrumbs">
 		<a href="/app/{{ b }}">{{ b }}</a>
 	      </li>
@@ -123,7 +125,7 @@
     </section>
 
 
-    {% if page.slug == "home" %}
+    {% if page.slug == homepage %}
     {% else %}
     <section id="comments">
       <div class="container">
