Added separated breadcrumbs in app page

--- a/static/app.html
+++ b/static/app.html
@@ -109,7 +109,7 @@
 	    {% endif %}
 	    {% raw %}
 	    <ol class="breadcrumb">
-	      <li><i class="fa fa-home"></i></li>
+	      <li><a></a href="/app/{{ home }}"><i class="fa fa-home"></i></a></li>
 	      <li ng-repeat="b in breadcrumbs">
 		<a href="/app/{{ b }}">{{ b }}</a>
 	      </li>
